cloud/onlyoffice/onlyoffice.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onlyoffice
spec:
  replicas: 1
  strategy:
    # with rolling update this happens at startup:
    #    [docId] [userId] nodeJS - start shutdown:%b true
    #    [2214091974] [userId] nodeJS - error description: errorId = Server shutdow
    # It seems like old and new deployments affect each other, maybe via rabbitmq
    type: Recreate
  selector:
    matchLabels:
      app: onlyoffice
  template:
    metadata:
      labels:
        app: onlyoffice
    spec:
      terminationGracePeriodSeconds: 3
      securityContext:
        # docker.io/onlyoffice/documentserver requires root to run
        runAsUser: 0
      containers:
      - name: install
        image: docker.io/onlyoffice/documentserver:7.3.3
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: entrypoint
          mountPath: /app/ds/run-document-server.sh
          subPath: run-document-server.sh
        # onlyoffice dockerfile declares a bunch of volumes that should be persistent when run in docker
        # in k8s these volumes are not persistent
        # also they pollute the list of mounted volumes
        - name: delete
          mountPath: /var/lib/postgresql
          readOnly: true
        - name: delete
          mountPath: /var/lib/rabbitmq
          readOnly: true
        - name: delete
          mountPath: /var/lib/redis
        resources:
          requests:
            cpu: 0m
            memory: 100Mi
          limits:
            cpu: 4
            memory: 1Gi
        startupProbe:
          httpGet:
            path: /index.html
            port: http
            scheme: HTTP
          periodSeconds: 2
          timeoutSeconds: 1
          successThreshold: 1
          # Onlyoffice startup is extremely slow
          failureThreshold: 240
      volumes:
      - name: delete
        emptyDir:
          medium: Memory
          sizeLimit: 1Ki
      - name: entrypoint
        configMap:
          name: entrypoint
          defaultMode: 0555
---
apiVersion: v1
kind: Service
metadata:
  name: onlyoffice
spec:
  selector:
    app: onlyoffice
  ports:
  - name: http
    protocol: TCP
    port: 80
